tests/from/skip.stderr
error[E0277]: the trait bound `Example: From<{float}>` is not satisfied
  --> tests/from/skip.rs:12:27
   |
12 |     let ex: Example = 1.3.into();
   |                           ^^^^ the trait `From<{float}>` is not implemented for `Example`, which is required by `{float}: Into<_>`
   |
   = help: the following other types implement trait `From<T>`:
             <Example as From<()>>
             <Example as From<String>>
   = note: required for `{float}` to implement `Into<Example>`
